fix(web): add missing `--gray-contrast` css variable

--- a/apps/web/src/main.css
+++ b/apps/web/src/main.css
@@ -92,4 +92,5 @@ img {
   --gray-10: var(--slate-10);
   --gray-11: var(--slate-11);
   --gray-12: var(--slate-12);
+  --gray-contrast: var(--slate-contrast);
 }
